--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
     "axios": "^1.4.0",
+    "export-to-csv": "^0.2.1",
     "flowbite": "^1.6.5",
     "flowbite-react": "^0.4.4",
     "jspdf": "^2.5.1",
