--- a/package.json
+++ b/package.json
@@ -34,8 +34,9 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "jest",
-    "eject": "react-scripts eject"
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "coverage": "yarn test --coverage --watchAll --collectCoverageFrom='src/components/**/*.{ts,tsx}' --collectCoverageFrom='!src/components/**/*.{types,stories,contants,test,spec}.{ts,tsx}'"
   },
   "eslintConfig": {
     "extends": [
@@ -72,6 +73,14 @@
     "tailwindcss": "^3.3.2"
   },
   "jest": {
+    "coverageThreshold": {
+      "global": {
+        "branches": 80,
+        "functions": 80,
+        "lines": 80,
+        "statements": -10
+      }
+    },
     "transform": {
       "^.+\\.[t|j]sx?$": "babel-jest"
     },
