--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
     "axios": "^1.4.0",
+    "canvas": "^2.11.2",
     "export-to-csv": "^0.2.1",
     "flowbite": "^1.6.5",
     "flowbite-react": "^0.4.4",
@@ -57,11 +58,12 @@
     ]
   },
   "devDependencies": {
-    "@babel/preset-env": "^7.22.4",
+    "@babel/core": "^7.22.9",
+    "@babel/preset-env": "^7.22.9",
     "@babel/preset-react": "^7.22.3",
     "@tailwindcss/forms": "^0.5.3",
     "autoprefixer": "^10.4.14",
-    "babel-jest": "^29.5.0",
+    "babel-jest": "^29.6.1",
     "eslint": "^8.41.0",
     "eslint-config-react-app": "^7.0.1",
     "eslint-plugin-react": "^7.32.2",
@@ -73,6 +75,9 @@
     "tailwindcss": "^3.3.2"
   },
   "jest": {
+    "transform": {
+      "^.+\\.[t|j]sx?$": "babel-jest"
+    },
     "coverageThreshold": {
       "global": {
         "branches": 80,
@@ -80,13 +85,6 @@
         "lines": 80,
         "statements": -10
       }
-    },
-    "transform": {
-      "^.+\\.[t|j]sx?$": "babel-jest"
-    },
-    "testEnvironment": "jest-environment-jsdom-sixteen",
-    "testEnvironmentOptions": {
-      "resources": "usable"
     }
   }
 }
