--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "@babel/core": "^7.22.9",
     "@babel/preset-env": "^7.22.9",
     "@babel/preset-react": "^7.22.3",
+    "@jest/transform": "^29.6.2",
     "@tailwindcss/forms": "^0.5.3",
     "autoprefixer": "^10.4.14",
     "babel-jest": "^29.6.1",
@@ -70,6 +71,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "jest": "^29.5.0",
     "jest-environment-jsdom-sixteen": "^2.0.0",
+    "jest-transform-stub": "^2.0.0",
     "msw": "^1.2.1",
     "postcss": "^8.4.23",
     "tailwindcss": "^3.3.2"
