--- a/package.json
+++ b/package.json
@@ -29,7 +29,20 @@
     "react-scripts": "^5.0.1",
     "react-use": "^17.4.0",
     "recharts": "^2.6.2",
-    "web-vitals": "^2.1.0",
+    "serve": "^14.2.0",
+    "web-vitals": "^2.1.4",
+    "workbox-background-sync": "^6.4.2",
+    "workbox-broadcast-update": "^6.4.2",
+    "workbox-cacheable-response": "^6.4.2",
+    "workbox-core": "^6.4.2",
+    "workbox-expiration": "^6.4.2",
+    "workbox-google-analytics": "^6.4.2",
+    "workbox-navigation-preload": "^6.4.2",
+    "workbox-precaching": "^6.4.2",
+    "workbox-range-requests": "^6.4.2",
+    "workbox-routing": "^6.4.2",
+    "workbox-strategies": "^6.4.2",
+    "workbox-streams": "^6.4.2",
     "zod": "^3.21.4"
   },
   "scripts": {
